# uv-texture-synthesizer

./: .env  .gitignore  .pre-commit-config.yaml  AUTHOR  CMakeLists.txt  README.md  bilinear_interpolator.py  conanfile.txt  requirements.txt  test.py
docker/: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pkg_install.sh  sshd_config  start_docker_compose.sh
include/cpp/: camera.hpp  camera_manager.hpp  image.hpp  image_manager.hpp  main.hpp  memory_manager.hpp  mesh.hpp  one_ring_kernel_wrappers.hpp  photo_kernel_wrappers.hpp  refiner.hpp  refiner_kernel_wrappers.hpp  shift_vector.hpp  synthesizer.hpp  synthesizer_kernel_wrappers.hpp  texture.hpp  triangle_kernel_wrappers.hpp
include/cuda/: geometric_utils.cuh  patch_metrics.cuh  triangle.cuh
scripts/: add_copyright.sh  conda_env_setup.sh  cuda_gdb_wrapper.sh  libpython3.6_setup.sh  nvidia_docker_setup.sh
src/cpp/: camera.cpp  camera_manager.cpp  image.cpp  image_manager.cpp  main.cpp  mesh.cpp  refiner.cpp  shift_vector.cpp  synthesizer.cpp  texture.cpp
src/cuda/: one_ring_kernels.cu  patch_extractor.cu  patch_metrics.cu  photo_kernels.cu  refiner.cu  refiner_kernels.cu  synthesizer_kernels.cu  triangle.cu  triangle_kernels.cu
tests/: mesh_repair_utils.hpp
